day7/challenges/samples/challenge-4/2_apis/1_contactsapi/ca-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: contactsapi
  labels:
    application: scmcontacts
    service: contactsapi
spec:
  type: ClusterIP
  selector:
    application: scmcontacts
    service: contactsapi
  ports:
    - port: 8080
      targetPort: 5000
